--- a/proj4/project4-stage2.ipynb
+++ b/proj4/project4-stage2.ipynb
@@ -60,7 +60,9 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%pip install torch==2.3.1 huggingface_hub==1.25.2 transformers datasets==3.0.1 wandb==0.18.3 numpy==1.26.4 scikit-learn==1.5.2 ruff==0.6.9"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TrainingArguments, Trainer\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from datasets import Value\n",
+    "from datasets import load_dataset\n",
+    "import wandb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,7 +99,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "WANDB_PROJECT = \"nlp-project-4\"\n",
+    "os.environ[\"WANDB_PROJECT\"]=WANDB_PROJECT\n",
+    "os.environ[\"WANDB_NOTEBOOK_NAME\"]=\"project4-stage2\"\n",
+    "wandb.login()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,13 +122,12 @@
     "\n",
     "Input format:\n",
     "- concatenated `question` and `passage` strings\n",
-    "- with a special seperator token in the middle to differentiate between them\n",
-    "- the ordering should not matter as transformers do not have sequential processing like RNNs\n",
+    "- with a special seperator token from the model vocabulary in the middle to differentiate between them\n",
+    "- question before passage because to be able to answer the question it first hast to be known\n",
     "\n",
     "Label format:\n",
     "- convert `answer` boolean to 1 or 0\n",
     "- Model output is probability of 1\n",
-    "- `dataset.cast_column(\"answer\", Value(\"int32\"))`\n",
     "\n",
     "Batch size: 64 for faster training than with individual samples\n",
     "\n",
@@ -139,7 +153,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_raw = load_dataset(\"google/boolq\", split=\"train[:-1000]\")\n",
+    "valid_raw = load_dataset(\"google/boolq\", split=\"train[-1000:]\")\n",
+    "test_raw = load_dataset(\"google/boolq\", split=\"validation\")\n",
+    "\n",
+    "print(len(train_raw), len(valid_raw), len(test_raw))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,8 +170,15 @@
     "- Tokenize sentence with `DeBERTAV2Tokenizer`\n",
     "    - It handles the tokenization of the text with `SentencePiece` and the conversion to word vectors as well.\n",
     "    - `SentencePiece` is a subword tokenizer, which learns how to split the text into subwords\n",
-    "    - Truncatation to the maximum input length of the model\n",
-    "    - Padding to the maximum input length of each batch is done by the `DataCollatorWithPadding` later"
+    "    - Padding to the maximum input length of each batch is done by the `DataCollatorWithPadding` later\n",
+    "    - Truncation should not be needed, as the maximum input length is quite large (over the usual 512)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert answer boolean to 1 or 0, because the model output is a probability of 1."
    ]
   },
   {
@@ -159,7 +186,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_casted = train_raw.cast_column(\"answer\", Value(\"float32\"))\n",
+    "valid_casted = valid_raw.cast_column(\"answer\", Value(\"float32\"))\n",
+    "test_casted = test_raw.cast_column(\"answer\", Value(\"float32\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL = \"deberta-v3-small\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL)\n",
+    "\n",
+    "def preprocess_dataset(row):\n",
+    "    query = row[\"question\"] + \"[SEP]\" + row[\"passage\"]\n",
+    "    tokenized = tokenizer(query)\n",
+    "    tokenized[\"labels\"] = row[\"answer\"]\n",
+    "    return tokenized\n",
+    "\n",
+    "train_concatenated = train_casted.map(preprocess_dataset)\n",
+    "valid_concatenated = valid_casted.map(preprocess_dataset)\n",
+    "test_concatenated = test_casted.map(preprocess_dataset)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,21 +224,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Convert answer boolean to 1 or 0, because the model output is a probability of 1."
+    "train = train_concatenated.remove_columns([\"question\", \"passage\"])\n",
+    "valid = valid_concatenated.remove_columns([\"question\", \"passage\"])\n",
+    "test = test_concatenated.remove_columns([\"question\", \"passage\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -201,45 +242,65 @@
     "    - ReLu\n",
     "\n",
     "## Network Architecture\n",
-    "- Transformer encoder layer\n",
-    "    - `DeBERTa`\n",
-    "    - Input Dimension: \n",
-    "    - Output Dimension:  \n",
-    "- Output layer\n",
+    "- Transformer encoder\n",
+    "    - `DeBERTa-v3-large`\n",
+    "    - Input Dimension: Batch size x 128100\n",
+    "    - Output Dimension: Batch size x 768\n",
+    "    - It was chosen as the latest version of the `DeBERTa` series, which have improvement over the original `BERT` model.\n",
+    "        - With improvements in attention and pre training over `BERT` and `RoBRTa`.\n",
+    "        - the `large` variant is used because I assume it will fit into memory and performs better than the base variant\n",
+    "        - The `v2` tokenizer is compatible with the `v3` model\n",
+    "- Classifier\n",
     "    - `nn.Linear`\n",
-    "    - Input Dimension: \n",
-    "    - Output Dimension: 1\n",
-    "        - Output is probability of class (1 = 100% true, 0 = 0% true)\n",
-    "    - Activation: `torch.nn.ReLu`\n",
-    "    - Final Activation: `torch.sigmoid`\n",
+    "        - Input Dimension: 768 (Pooled output of `DeBERTa`)\n",
+    "        - Output Dimension: 256\n",
+    "        - Activation: `torch.nn.ReLu`\n",
+    "        - Output shape is smaller than input, to promote the model to learn more abstract features for the classification\n",
+    "    - `nn.Dropout`\n",
+    "        - Dropout rate: 0.1\n",
+    "        - Dropout is used to prevent overfitting, which happens easily with such a small dataset\n",
+    "    - `nn.Linear`\n",
+    "        - Input Dimension: 256\n",
+    "        - Output Dimension: 1\n",
+    "            - Output is probability of class (1 = 100% true, 0 = 0% true)\n",
+    "        - Final Activation: `torch.nn.Sigmoid`\n",
     "\n",
-    "- Normalization: Done by `DeBERTa` model\n",
-    "- Regularization: done by optimizer\n",
-    "\n",
+    "- Normalization: Done in the `DeBERTa` model with their Masked Layer Normalization\n",
+    "- Regularization: Optimizer `AdamW` applies L2 regularization to loss, no regularization layer is in `DeBERTa`\n",
     "\n",
     "### Loss function\n",
     "Default by transformers library: Binary Cross-Entropy with logit loss:\n",
-    "- Is used because it is the best choice for binary classification problems\n",
-    "- With logits because it is supposedly more numerically stable\n",
+    "- Not changed because it is the best choice for binary classification problems\n",
+    "- and with logits can be better than only Binary cross entropy because it is supposedly more numerically stable\n",
     "\n",
     "### Optimizer\n",
-    "Default by transformers library: AdamW\n",
-    "- Chosen because it should be better with less hyperparamater tuning than SGD and the default Adam\n",
+    "Default by transformers library: `AdamW`\n",
+    "- Not changed because it performs well and the original `DeBERTa` was also trained with a version of `AdamW`\n",
     "\n",
     "## Correctness test\n",
     "Test run of training, validation, test and prediction with 1 input\n",
+    "Check transformer encoder output shapes\n",
     "\n",
     "## Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model = AutoModelForSequenceClassification.from_pretrained(MODEL, problem_type=\"multi_label_classification\", num_labels=1)\n",
+    "model.classifier = torch.nn.Sequential(\n",
+    "    torch.nn.Linear(768, 526),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Dropout(0.1),\n",
+    "    torch.nn.Linear(258, 1),\n",
+    "    torch.nn.Sigmoid()\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,10 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.environ[\"WANDB_LOG_MODEL\"] = \"checkpoint\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -279,9 +342,15 @@
     "- Extensive sweep to check which learning rate is optimal\n",
     "- No learning rate scheduler is needed as AdamW handles adjusting learning rates dynamically on its own with the passed learning rate being the maximum\n",
     "\n",
+    "No other experiments are done, because there are not many other parameters which can be changed, as we are using a pre trained model. Additionally finding the optimal learning rate is the most important part of training the model.\n",
+    "- The classifier hidden sizes are not changed as they are intended to be decreasing. For the model to pre compress the information before the binary classifcation.\n",
+    "- No Weight decay because it might affect the pre trained model negativly\n",
+    "- Learning rate warm up is not done, because max epochs are relativly low  \n",
+    "\n",
     "\n",
     "### Early stop\n",
-    "Compare to previous epochs validation loss\n",
+    "Early stopping is done by wandb sweeps.\n",
+    "- Compare to previous epochs validation loss\n",
     "- wandb sweeps use the Hyperband algorithm\n",
     "- Max epochs 50\n",
     "- Check every 10 epochs"
@@ -289,10 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "experiments = {\n",
+    "    \"method\": \"bayesian\",\n",
+    "    \"metric\": {\"goal\": \"minimize\", \"name\": \"val_loss\"},\n",
+    "    \"parameters\": {\n",
+    "        \"lr\": {\"values\": [1e-4, 1e-5]},\n",
+    "    },\n",
+    "    \"early_terminate\": {\"type\": \"hyperband\", \"max_iter\": 50, \"s\": 10, \"eta\": 3},\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,35 +381,47 @@
     "Configure training and evaluation with `TrainingArguments`. \n",
     "- set `seed` for reproducibility\n",
     "- `logging_strategy = 'epoch'` to log metrics after each epoch\n",
-    "- `evaluation_strategy = 'epoch'` to evaluate after each epoch\n",
+    "- `eval_strategy = 'epoch'` to evaluate after each epoch\n",
     "- `save_strategy = 'steps'` to save after ever 500 steps\n",
     "- `save_total_limit = 3` to save only the last 3 checkpoints\n",
     "- `label_names = ['answer']` to set the label name to the key we use\n",
     "- `report_to = 'wandb'` to log metrics to wandb\n",
+    "- `run_name` to set the name of the run to an informative name\n",
     "- `dataloader_num_workers = 4` to speed up data loading\n",
-    "\n",
+    "- `per_device_train_batch_size = 64` to set the desired batch size for training\n",
+    "- `per_device_eval_batch_size = 64` to set the desired batch size for evaluation\n",
+    "- `num_train_epochs = 50` to set the desired max epochs\n",
     "\n",
     "Metrics for training and validation:\n",
     "- Accuracy, because we are interested in both correct true and false predictions\n",
     "- Loss, to see how confident the model is in its predictions\n",
+    "- Metrics are logged every epoch. Because logging per step is very noisy and does not have a benefit.\n",
     "\n",
     "Loss is the main metric for all decisions, as it is the most important metric for the model. Accuracy should follow loss in a correct model. Therefore, it is not necessary to optimize for accuracy.\n",
     "\n",
     "As discussed in class no other metrics are needed for training and validation. As accuracy and loss are sufficient to evaluate which model is the best.\n",
     "\n",
-    "Log training and validation metrics to wandb after every epoch. Logging per step would be too noisy and have no benefit.\n",
-    "\n",
-    "Accuracy has to be implemented seperatly for training and evaluation, because `Trainer` only logs loss per default. \n",
+    "Accuracy has to be implemented seperatly for training and evaluation, because `Trainer` from `transformers` only logs loss per default. \n",
     "\n",
     "## Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_args = TrainingArguments(\n",
+    "    seed=42,\n",
+    "    logging_strategy=\"epoch\",\n",
+    "    eval_strategy=\"epoch\",\n",
+    "    save_strategy=\"steps\",\n",
+    "    save_total_limit=3,\n",
+    "    report_to=\"wandb\",\n",
+    "    dataloader_num_workers=4,\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -348,7 +438,40 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def sweep():\n",
+    "    with wandb.init(project=WANDB_PROJECT) as run:\n",
+    "        name = f\"lr:{wandb.config['lr']}\"\n",
+    "        run.name = name\n",
+    "\n",
+    "        train_args = TrainingArguments(\n",
+    "            learning_rate=wandb.config['lr'],\n",
+    "            seed=42,\n",
+    "            logging_strategy=\"epoch\",\n",
+    "            evaluation_strategy=\"epoch\",\n",
+    "            save_strategy=\"steps\",\n",
+    "            save_total_limit=3,\n",
+    "            report_to=\"wandb\",\n",
+    "            dataloader_num_workers=4,\n",
+    "        )\n",
+    "        trainer = Trainer(model, train_args, train_dataset=train, eval_dataset=valid, tokenizer=tokenizer, compute_metrics=\"\")\n",
+    "\n",
+    "        name = f\"pos:{wandb.config['positional']}/heads:{wandb.config['heads']}/lr:{wandb.config['lr']}\"\n",
+    "        try:\n",
+    "            trainer.train()\n",
+    "            trainer.evaluate()\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "        finally:\n",
+    "            wandb.finish()\n",
+    "        wandb.finish()\n",
+    "\n",
+    "\n",
+    "sweep_id = wandb.sweep(sweep=experiments, project=WANDB_PROJECT)\n",
+    "\n",
+    "wandb.agent(sweep_id, function=sweep, project=WANDB_PROJECT)\n",
+    "wandb.teardown()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,15 +485,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# check wandb for sweep id\n",
+    "SWEEP_ID = \"zmgqc6oi\"\n",
+    "\n",
+    "api = wandb.Api()\n",
+    "sweep = api.sweep(f\"yelin-zhang-hslu/{WANDB_PROJECT}/{SWEEP_ID}\")\n",
+    "runs = sorted(\n",
+    "    sweep.runs,\n",
+    "    key=lambda run: run.summary.get(\"val_loss\", 99),\n",
+    "    reverse=False,\n",
+    ")\n",
+    "val_loss = runs[0].summary.get(\"val_loss\", 99)\n",
+    "print(f\"Best run {runs[0].name} with {val_loss} validation loss\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Evaluation\n",
-    "A few additional metrics are implemented for evaluation for better interpretation of the model results.\n",
-    "\n",
     "Metrics:\n",
     "- Accuracy\n",
     "    - to be able to compare the model to the previous projects\n",
@@ -380,16 +514,12 @@
     "    - To be able to see where the model tends to make mistakes.\n",
     "    - `torchmetrics.functional.confusion_matrix(preds, target, num_classes=2)`\n",
     "    - As discussed in class: use scikit-learn instead of wandb, as it is easier to interpret\n",
-    "- Recall and Specifcity\n",
-    "    - For error anlysis of the predictions of the classes\n",
-    "    - Suggested in class to see how the model performs on the different classes\n",
-    "    - Recall for true labels, specificity for false lables\n",
-    "    - `torchmetrics.functional.recall(preds, target, task='binary')`\n",
-    "    - `torchmetrics.functional.specificity(preds, target, task='binary')` \n",
     "- Total false predictions\n",
     "    - To see how many false predictions the model made\n",
     "\n",
     "The averaging of the metrics is the default of `micro` which means the metrics are caculated without weighting of the classes.\n",
+    "\n",
+    "Evaluation will also be done with the `Trainer` class, just using the `evaluate` method and the test dataset.\n",
     "\n",
     "## Implementation\n",
     "\n",
@@ -398,16 +528,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_confusion_matrix(trainer, classifier, dataset):\n",
+    "    dataloader = utils.data.DataLoader(\n",
+    "        dataset, batch_size=64, num_workers=2, pin_memory=True, collate_fn=batch_collate\n",
+    "    )\n",
+    "    pred_batches = trainer.predict(classifier, dataloaders=dataloader)\n",
+    "    preds = np.array([])\n",
+    "    for batch in pred_batches:\n",
+    "        preds = np.concatenate((preds, batch.squeeze().numpy()))\n",
+    "    matrix = ConfusionMatrixDisplay.from_predictions(\n",
+    "        y_true=dataset[\"answer\"],\n",
+    "        y_pred=np.round(preds),\n",
+    "    )\n",
+    "    return matrix"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check if the implementation for test and predict are correct"
+    "Check if the implementation for test and predict are correct by running it once and checking the output"
    ]
   },
   {
@@ -415,7 +559,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "checkpoint_reference = f\"yelin-zhang-hslu/{WANDB_PROJECT}/model-{runs[0].id}:best\"\n",
+    "\n",
+    "artifact = api.artifact(checkpoint_reference).download()\n",
+    "wandb.init(project=WANDB_PROJECT, id=runs[0].id, resume=\"allow\")\n",
+    "\n",
+    "# classifier_final = TransformerClassifier.load_from_checkpoint(Path(artifact) / \"model.ckpt\")"
+   ]
   },
   {
    "cell_type": "markdown",
