--- a/proj4/project4-stage2.ipynb
+++ b/proj4/project4-stage2.ipynb
@@ -169,7 +169,7 @@
     "    - Add special seperator token `[SEP]` between them to distinguish both texts from another\n",
     "- Tokenize sentence with `DeBERTAV2Tokenizer`\n",
     "    - It handles the tokenization of the text with `SentencePiece` and the conversion to word vectors as well.\n",
-    "    - `SentencePiece` is a subword tokenizer, which learns how to split the text into subwords\n",
+    "    - `SentencePiece` is a subword tokenizer, which learns how to split the text into subwords based on the pretrain dataset\n",
     "    - Padding to the maximum input length of each batch is done by the `DataCollatorWithPadding` later\n",
     "    - Truncation should not be needed, as the maximum input length is quite large (over the usual 512)"
    ]
